# digisurf

./: Cargo.toml  LICENSE  README.md  TODO.md
resources/: config.toml  test_data.vcd  test_data_busses.vcd  test_data_many_binary_signals.vcd  vcd_spec.txt
src/: app.rs  cli.rs  constants.rs  input.rs  keybindings.rs  main.rs  state.rs  types.rs
src/command_mode/: builder.rs  mod.rs  parser.rs  registry.rs  state.rs
src/commands/: find_signal.rs  goto.rs  help.rs  marker.rs  mod.rs  quit.rs  zoom.rs  zoomfull.rs
src/config/: mod.rs
src/fuzzy_finder/: mod.rs  state.rs
src/input/: handler.rs  keybindings.rs  mod.rs
src/model/: types.rs
src/parsers/: mod.rs  parse_fns.rs  types.rs  vcd.rs
src/snapshots/: digisurf__app__tests__arrow_keys_left_at_time_start_does_not_move.snap  digisurf__app__tests__arrow_keys_left_once.snap  digisurf__app__tests__arrow_keys_left_twice.snap  digisurf__app__tests__arrow_keys_right_at_time_end_does_not_move.snap  digisurf__app__tests__arrow_keys_right_once.snap  digisurf__app__tests__arrow_keys_right_twice.snap  digisurf__app__tests__arrow_keys_right_twice_then_left_once.snap  digisurf__app__tests__help_menu_no_scroll.snap  digisurf__app__tests__help_menu_with_scroll.snap  digisurf__app__tests__render_app.snap  digisurf__app__tests__render_app_in_command_mode.snap  digisurf__app__tests__render_app_in_fuzzy_finder_mode.snap  digisurf__app__tests__render_app_with_bus_values.snap  digisurf__app__tests__render_app_with_command_result.snap  digisurf__app__tests__render_app_with_help_menu.snap  digisurf__app__tests__scroll_down.snap  (+4 more)
(+22 files in other folders)
