[package]
name = "digisurf"
version = "0.1.0"
edition = "2021"
authors = ["Sean McLoughlin <smclough@protonmail.com>"]
include = ["resources/**/*"]
license-file = "LICENSE"
description = "A TUI digital signal waveform viewer"
repository = "https://github.com/SeanMcLoughlin/digisurf"
readme = "README.md"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["serde"] }
directories = "6.0.0"
lazy_static = "1.5.0"
nom = "8.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
indexmap = "2.0.0"
fuzzy-matcher = "0.3.7"

[dev-dependencies]
insta = "1.42.1"
tempfile = "3.17.1"
